[package]
name = "mini-redis-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = {version = "4.5.20",features = ["derive"]}
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "permit"
harness = false
